--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,4 +1,4 @@
-form {
+.formlog {
     border: 3px solid #8b8787;
     width: 350px;
     margin:auto;
@@ -7,12 +7,12 @@ form {
     margin-right: auto;
 }
 
-.judul{
+.judullog{
     text-align: center;
     margin: 30px auto;
 }
 
-input[type=text], input[type=password] {
+.inputlog[type=text], .inputpass[type=password] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -21,9 +21,9 @@ input[type=text], input[type=password] {
     box-sizing: border-box;
 }
 
-button {
+.buttonlog {
     background-color: #006666;
-    color: white;
+    color: #FFFFFF;
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
@@ -31,32 +31,44 @@ button {
     width: 100%;
 }
 
-button:hover {
+.buttonlog:hover {
     opacity: 0.8;
 }
 
-.cancelbtn {
+.cancelbtnlog {
     width: auto;
     padding: 10px 18px;
     background-color: #f44336;
 }
 
-.imgcontainer {
+.imgcontainerlog {
     text-align: center;
     margin: 24px 0 12px 0;
 }
 
-img.avatar {
+img.avatarlog {
     width: 40%;
     border-radius: 50%;
 }
 
-.container {
+.containerlog {
     padding: 16px;
 
 }
 
-span.psw {
+.buttonlog {
+
+        background-color: #006666;
+        color: #FFFFFF;
+        padding: 14px 20px;
+        margin: 8px 0;
+        border: none;
+        cursor: pointer;
+        width: 100%;
+    }
+    
+
+span.pswlog {
     float: right;
     padding-top: 16px;
 } 
