--- a/src/components/Registrasi.css
+++ b/src/components/Registrasi.css
@@ -60,3 +60,5 @@ span.psw {
     float: right;
     padding-top: 16px;
 } 
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto&display=swap");@import url("https://fonts.googleapis.com/css2?family=Lora:wght@500;600;700&family=Poppins&display=swap");@import url("https://fonts.googleapis.com/css2?family=Teko:wght@400;500&family=Ubuntu&display=swap");
