--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -59,7 +59,7 @@ body{
     border:1px solid rgb(30, 180, 160);
   }
   
-  button{
+  .buttonlogout{
     padding: 5px 0 5px 5px;
     width:150px;
     border-radius:0px;
