--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,10 +1,11 @@
 .formlog {
-    border: 3px solid #8b8787;
-    width: 350px;
+    border: 4px solid #8b8787;
     margin:auto;
+    height: 490px;
     width: 400px;
     margin-left: auto;
     margin-right: auto;
+    border-radius: 20px;
 }
 
 .judullog{
@@ -56,7 +57,7 @@ img.avatarlog {
 
 }
 
-.buttonlog {
+/* .buttonlog {
 
         background-color: #006666;
         color: #FFFFFF;
@@ -65,7 +66,7 @@ img.avatarlog {
         border: none;
         cursor: pointer;
         width: 100%;
-    }
+    } */
     
 
 span.pswlog {
