--- a/src/components/Registrasi.css
+++ b/src/components/Registrasi.css
@@ -1,10 +1,11 @@
 .formreg {
-    border: 3px solid #8b8787;
-    width: 350px;
+    border: 4px solid #8b8787;
     margin:auto;
     width: 400px;
+    height: 490px;
     margin-left: auto;
     margin-right: auto;
+    border-radius: 20px;
 }
 
 .judulreg{
